--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background: rgb(238,174,202);
-  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 77%);
+  background:red;
 
 h1,
 h2,
