--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background:red; 
+  background:rgb(32, 160, 234); 
 
 h1,
 h2,
